tests/baselines/reference/parser512084.errors.txt
==== tests/cases/compiler/parser512084.ts (1 errors) ====
    class foo {
    
    
!!! parser512084.ts(2,1): error TS1005: '}' expected.